<resources>
    <string name="app_name">Zoo Praha</string>
    <string name="main_button_lexicon_text">Lexikon</string>
    <string name="main_button_adoptions_text">Adopce</string>
    <string name="main_button_events_text">Události</string>
    <string name="main_button_quiz_text">Kvíz</string>
    <string name="main_button_map_text">Mapa</string>
    <string name="main_button_profile_text">Profil</string>
    <string name="list_empty_textview_text">Nebyly nalezeny žádné záznamy</string>
    <string name="fragment_adoption_no_detail_toast">Toto zvíře nemá detail</string>
    <string name="fragment_adoption_visit_yes">s možností návštěv</string>
    <string name="fragment_adoption_visit_no">bez možnosti návštěv</string>
    <string name="fragment_adoption_price_visit">Cena adopce: %1$d Kč, %2$s.</string>
    <string name="fragment_animal_name_label">Jméno:</string>
    <string name="fragment_animal_class_label">Třída:</string>
    <string name="fragment_animal_order_label">Řád:</string>
    <string name="fragment_animal_continents_label">Kontinent:</string>
    <string name="fragment_animal_distribution_label">Rozšíření:</string>
    <string name="fragment_animal_biotopes_label">Biotop:</string>
    <string name="fragment_animal_food_label">Potrava:</string>
    <string name="fragment_animal_proportions_label">Rozměry:</string>
    <string name="fragment_animal_attractions_label">Zajímavosti:</string>
    <string name="fragment_animal_location_label">V ZOO:</string>
    <string name="fragment_animal_breeding_label">Chov:</string>
    <string name="fragment_animal_projects_label">Ochrana:</string>
    <string name="fragment_animal_description_label">Popis:</string>
    <string name="fragment_animal_reproduction_label">Reprodukce:</string>
    <string name="lexicon_menu_classifications_filter_text">Klasifikace</string>
    <string name="lexicon_menu_classifications_filter_first_item_text">> zobrazit celou třídu</string>
    <string name="lexicon_menu_locations_filter_text">Umístění v ZOO</string>
    <string name="lexicon_menu_continents_filter_text">Kontinent</string>
    <string name="lexicon_menu_biotopes_filter_text">Biotop</string>
    <string name="lexicon_menu_food_filter_text">Potrava</string>
    <string name="fragment_event_name_label">Název:</string>
    <string name="fragment_event_start_label">Začátek:</string>
    <string name="fragment_event_end_label">Konec:</string>
    <string name="fragment_event_duration_label">Délka:</string>
    <string name="fragment_event_duration">%1$s a %2$s</string>
    <string name="fragment_event_description_label">Popis:</string>
    <string name="fragment_event_list_item_date">Datum konání: %1$s</string>
    <string name="fragment_event_list_item_date_unknown">Datum konání: neznámé</string>
    <string name="fragment_event_list_item_dates">Datum konání: %1$s - %2$s</string>
    <string name="quiz_menu_new_game_button_text">Nová hra</string>
    <string name="quiz_menu_leaderboard_button_text">Žebříček</string>
    <string name="quiz_menu_badges_button_text">Medaile</string>
    <string name="quiz_menu_settings_button_text">Nastavení</string>
    <string name="quiz_menu_help_button_text">Nápověda</string>
    <string name="fragment_question_number_textview_text">Otázka č. %1$d</string>
    <string name="fragment_question_score_textview_text">Správně: %1$d / %2$d</string>
    <string name="question_answered_animal_detail_button_text">Detail zvířete</string>
    <string name="question_answered_next_question_button_text">Další otázka</string>
    <string name="question_answered_next_question_button_finish_text">Výsledek</string>
    <string name="question_answered_result_correct_textview_text">Otázka byla zodpovězena správně!</string>
    <string name="question_answered_result_incorrect_textview_text">Otázka byla zodpovězena špatně. Správná odpověď zní: %1$s.</string>
    <string name="question_answered_result_timeout_textview_text">Časový limit vypršel. Správná odpověď zní: %1$s.</string>
    <string name="question_answered_flag_alert_text">Opravdu chcete otázku označit jako chybnou?</string>
    <string name="question_answered_flag_alert_yes">Ano</string>
    <string name="question_answered_flag_alert_no">Ne</string>
    <string name="quiz_result_header">Konec hry</string>
    <string name="quiz_result_correct_answers_textview_text">Správné odpovědi: %1$d / %2$d</string>
    <string name="quiz_result_incorrect_answers_textview_text">Špatné odpovědi: %1$d / %2$d</string>
    <string name="quiz_result_total_time_textview_text">Celkový čas: %1$d sekund</string>
    <string name="quiz_result_score_textview_text">Výsledné skóre: %1$d / %2$d</string>
    <string name="quiz_result_new_game_button_text">Nová hra</string>
    <string name="quiz_result_leaderboard_button_text">Nejlepší skóre</string>
    <string name="quiz_result_menu_button_text">Zpět do menu</string>
    <string name="datafetcher_error_loading_image">Při načítání obrázku došlo k chybě.</string>
    <string name="question_answered_flag_alert_title">Nahlášení chyby</string>
    <string name="question_answered_flag_alert_flagged">Otázka byla nahlášena a její správnost prozkoumáme, děkujeme za reakci!</string>
    <string name="quiz_settings_time_editview_label">Časový limit na odpověď (v\u00A0sekundách)</string>
    <string name="quiz_settings_questions_editview_label">Počet otázek v jedné hře</string>
    <string name="quiz_settings_name_editview_label">Vaše hráčské jméno</string>
    <string name="quiz_settings_save_button_text">Uložit</string>
    <string name="lexicon_menu_tab_taxonommy">Taxonomie</string>
    <string name="lexicon_menu_tab_filters">Ostatní filtry</string>
    <string name="fragment_animal_no_animal_error_text">Litujeme, ale detail zvířete se nepodařilo získat</string>
    <string name="fragment_animal_dialog_image_close">Zavřít</string>
    <string name="quiz_questions_loading_error">Nepodařilo se načíst otázky, zkontrolujte prosím své připojení k Internetu.</string>
    <string name="fragment_list_menu_item_search_text">Hledat</string>
    <string name="fragment_list_menu_item_search_clear_text">Zrušit vyhledávání</string>
    <string name="main_button_about_text">O aplikaci</string>
    <string name="activity_about_author_text">Autor: Vít Zdrubecký</string>
    <string name="activity_about_contact_text">Kontakt: app.zoopraha@gmail.com</string>
    <string name="activity_about_header_text">O aplikaci ZOO Praha</string>
    <string name="activity_about_version_text">Verze: 1.0</string>
    <string name="activity_about_date_text">Datum vydání: 26. 6. 2017</string>
    <string name="quiz_help_header_text">Nápověda</string>
    <string name="quiz_help_basics_text">Podstatou vědomostního kvízu je odpovídaní na\u00A0otázky týkající se zvířat, které můžete nalézt v\u00A0ZOO Praha. Obtížnost otázek se různí a jejich volba je v\u00A0rámci každé hry čistě náhodná.</string>
    <string name="quiz_help_game_text">Každá z\u00A0otázek má časový limit nutný k\u00A0jejímu zodpovězení. Odpočet začne hned jak je otázka zobrazena a po\u00A0jeho vypršení se otázka považuje za\u00A0špatně zodpovězenou. Volby odpovědi jsou vždy čtyři a jen jedna z\u00A0nich je správná. Na konci každé otázky máte možnost si nechat zobrazit detail zvířete, kterého se týkala a prostudovat ho. Pokud si myslíte, že je s\u00A0otázkou něco špatně, můžete nám to nahlásit pomocí tlačítka s\u00A0vlajkou a my otázku zkontrolujeme.</string>
    <string name="quiz_help_leaderboard_text">Na závěr každé hry Vám bude nabídnut její výsledek se statistikami a celkovým skóre. Vaše předchozí skóre si můžete zobrazit v\u00A0žebříčku.</string>
    <string name="quiz_help_settings_text">Některá nastavení kvízu si můžete sami změnit. Jedná se o\u00A0časový limit (stanovený v\u00A0sekundách) omezující dobu odpovědi, počet otázek v\u00A0jedné hře a Vaše uživatelské jméno, které bude spojeno s\u00A0Vašimi výsledky. Nastavení je dostupné z\u00A0hlavního menu kvízu.</string>

    <string-array name="quiz_settings_questions_options_array">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>
    
    <plurals name="hours">
        <item quantity="zero">%d hodin</item>
        <item quantity="one">%d hodina</item>
        <item quantity="few">%d hodiny</item>
        <item quantity="many">%d hodin</item>
        <item quantity="other">%d hodiny</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="zero">%d minut</item>
        <item quantity="one">%d minuta</item>
        <item quantity="few">%d minuty</item>
        <item quantity="many">%d minut</item>
        <item quantity="other">%d minuty</item>
    </plurals>

</resources>
