<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/ScrollView">

    <LinearLayout android:layout_height="wrap_content"
                  android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:gravity="center">

        <Button
            android:id="@+id/main_button_lexicon"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:text="@string/main_button_lexicon_text"/>
        <Button
            android:id="@+id/main_button_quiz"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:text="@string/main_button_quiz_text"/>

        <Button
            android:id="@+id/main_button_events"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:text="@string/main_button_events_text"/>

        <Button
            android:id="@+id/main_button_adoptions"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:text="@string/main_button_adoptions_text"/>

        <Button
            android:id="@+id/main_button_about"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:text="@string/main_button_about_text"/>
    </LinearLayout>
</ScrollView>
